# bililive_dm_pitlane

./: .gitignore  Bililive_dm.sln  NOTICE.md  README.md
.github/workflows/: build.yml
assets/: icon.icns
assets/cars/: cars.json
macos-native/: Package.swift  README.md
macos-native/Resources/: README.txt
macos-native/Sources/PitlaneDanmakuMac/: AppDelegate.swift  AppPaths.swift  AppSettings.swift  ApplicationMetadata.swift  AssetCatalog.swift  BilibiliMessageParser.swift  BilibiliWebRoomClient.swift  LocalObsServer.swift  LogService.swift  MainWindowController.swift  MessagePipeline.swift  Models.swift  OverlayWindowController.swift  SettingsStore.swift  TextSanitizer.swift  main.swift
macos-native/Tests/PitlaneDanmakuMacTests/: CoreBehaviorTests.swift
macos-native/scripts/: build-app.sh  generate-icons.swift  package-dmg.sh  render-dmg-background.swift  smoke-app.sh
windows-lite-native/: CMakeLists.txt  MIGRATION.md  README.md  package-lite.ps1  vcpkg.json
windows-lite-native/installer/: PitlaneDanmakuLite.iss  install-lite.ps1
windows-lite-native/src/: AppSettings.h  BilibiliClient.cpp  BilibiliClient.h  ChatMessage.h  LocalObsServer.cpp  LocalObsServer.h  SettingsStore.cpp  SettingsStore.h  TextSanitizer.cpp  TextSanitizer.h  main.cpp
windows-lite-native/tests/: BilibiliClientParsingSmoke.cpp
windows-lite-native/winui-shell/: App.xaml  App.xaml.cpp  App.xaml.h  LiteRuntime.cpp  LiteRuntime.h  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  PitlaneDanmaku.Lite.WinUI.sln  PitlaneDanmaku.Lite.WinUI.vcxproj  PitlaneDanmaku.Lite.WinUI.vcxproj.filters  README.md  app.manifest  package-winui-lite.ps1  pch.h  verify-winui-lite.ps1
windows-native/: README.md  build-installer.ps1
windows-native-lite/: CMakeLists.txt  MIGRATION.md  README.md
windows-native-lite/src/: AppSettings.h  ChatMessage.h  MessagePipeline.cpp  MessagePipeline.h  TextSanitizer.cpp  TextSanitizer.h  main.cpp
windows-native/PitlaneDanmaku.Installer/: PitlaneDanmaku.Installer.csproj  Program.cs
windows-native/PitlaneDanmaku.Windows/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  OverlayWindow.xaml  OverlayWindow.xaml.cs  PitlaneDanmaku.Windows.csproj
windows-native/PitlaneDanmaku.Windows/Models/: AppSettings.cs  CarAsset.cs  ChatMessage.cs  DanmakuHost.cs  OverlayMessageDto.cs
windows-native/PitlaneDanmaku.Windows/Rendering/: EmbeddedFonts.cs  OverlayLayout.cs
windows-native/PitlaneDanmaku.Windows/Services/: AssetCatalog.cs  BilibiliMessageParser.cs  BilibiliWebRoomClient.cs  LocalObsServer.cs  LogService.cs  MessagePipeline.cs  SettingsStore.cs  TextSanitizer.cs
